--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 
         <!-- Normalizes CSS -->
         <link rel="stylesheet" href="css/normalize.css">
-        <!-- Lightbox CSS -->
-        <!-- <link href="css/lightbox.css" rel="stylesheet"> -->
         <!-- Owl Carousel CSS -->
         <link href="css/owl.carousel.css" rel="stylesheet">
         <!-- Carousel Theme CSS -->
@@ -25,12 +23,6 @@
         <link rel="stylesheet" href="css/material-icons.css">
         <!-- Pixeden Icon CSS -->
         <link rel="stylesheet" href="css/helper.css">
-        <!-- Pixeden Icon CSS -->
-        <!-- <link rel="stylesheet" href="css/pe-icon-7-stroke.css"> -->
-        <!-- FontAwesome CSS -->
-        <!-- <link rel="stylesheet" href="css/font-awesome.min.css"> -->
-        <!-- Materialize CSS -->
-        <!-- <link rel="stylesheet" href="css/materialize.min.css"> -->
         <!-- Bootstrap CSS -->
     		<link rel="stylesheet" href="css/bootstrap.css">
             <!-- Transition CSS -->
@@ -65,17 +57,6 @@
         <script src="app/app.js"></script>
         <script src="app/routes.js"></script>
         <script src="app/directives.js"></script>
-        <script src="app/Modules/Form/Service/Form.js"></script>
-        <script src="app/Modules/Account/Service/GetAllAccounts.js"></script>
-        <script src="app/Modules/Account/Controller/ShowAccounts.js"></script>
-        <script src="app/Modules/Note/Service/GetAllNotes.js"></script>
-        <script src="app/Modules/Note/Controller/ShowNotes.js"></script>
-        <script src="app/Modules/Note/Controller/AddNote.js"></script>
-        <script src="app/Modules/Track/Service/GetAllTracks.js"></script>
-        <script src="app/Modules/Track/Controller/ShowTracks.js"></script>
-        <script src="app/Modules/Message/Service/ViewMessage.js"></script>
-        <script src="app/Modules/Message/Service/GetAllMessages.js"></script>
-        <script src="app/Modules/Message/Controller/ShowMessage.js"></script>
         <script src="app/Modules/Landing/Controller/LandingController.js"></script>
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -86,7 +67,7 @@
         <![endif]-->
     </head>
 
-    <body ng-app="Synyzapo-MBMS">
+    <body ng-app="BudgetBusters">
         <div ng-view class="view"></div>
 
         <!-- Bootstrap Core JavaScript -->
